CHANGELOG
---------

xx.xx.04 | Azureus 2.0.8.5

FEATURE: 

CHANGE: 

BUGFIX: 



16.03.04 | Azureus 2.0.8.4

CHANGE: WebUI plugin included in mainline (see http://azureus.sf.net/CVS/web.interface.howto.htm)
CHANGE: Much more reliable SF mirror auto-update handling [Nolar]

BUGFIX: Fix for loading .torrent files via web-browser/shell/doubleclick/etc [Nolar]



15.03.04 | Azureus 2.0.8.2

FEATURE: Show last time IPFilter list was updated in status area [Parg]
FEATURE: Support for "compact" tracker announce protocol [Parg]
FEATURE: Support for "key" tracker announce protocol [Parg]
FEATURE: Download Speed column in "My Torrents" turns red if below speed set in Queue config. [TuxPaper]
FEATURE: Webplugin swing ui has status area with total ul/dl [Parg]
FEATURE: XML over HTTP remote plugin interface (initially to support GTS) - mail parg@users.sf.net for details [Parg]

CHANGE: All config/pref files utilize .bak backup files [Parg]
CHANGE: Option to limit outstanding disk writes and piece hash checks [Parg]
CHANGE: Can delete shares in QUEUED state [Parg]

BUGFIX: Fix of startup issues under Win95/98/Me [TuxPaper]
BUGFIX: Locale-specific dir creation [Parg]
BUGFIX: Hebrew language works now [TuxPaper]
BUGFIX: Fixed long load times under Linux of Configuration view and General tab [TuxPaper]
BUGFIX: Popup windows now center in main monitor on multi-monitor setups [TuxPaper]
BUGFIX: Fix for Pieces and Files views off-by-one row drawing glitch under linux [TuxPaper]
BUGFIX: Sort on Health and Availability now enabled [TuxPaper]
BUGFIX: Various memory leaks (DiskManager instances not being freed) [Parg]



08.03.04 | Azureus 2.0.8.0

FEATURE: QUEUED status. Torrents that are queued are stopped, but available for automatic starting [TuxPaper]
FEATURE: Partial support for Read-Only data (for seeding) [TuxPaper]
FEATURE: Added "Forced-Start" to force a torrent to start, ignoring download limits or seeding rules [TuxPaper]