@@ -955,6 +955,8 @@ OpenTorrentWindow.startMode.forceStarted=Force Started
 OpenTorrentWindow.addPosition=Queue Position
 OpenTorrentWindow.addPosition.first=First
 OpenTorrentWindow.addPosition.last=Last
+MyTorrentsView.remaining.info=Amount remaining to download
+MyTorrentsView.remaining=Remaining
 ConfigView.section.tracker.enablecompact=Enable compact announce protocol
 ConfigView.section.tracker.enablekey=Enable key passing to tracker for enhanced security
 ConfigView.label.maxuploadspeed.kbs=KB/s
